# scrutiny-embedded

./: .clang-format  .codebanner.json  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE  README.md
.github/: FUNDING.yml
ci/cmake/: avr-gcc.cmake
cmake/: aarch64-linux-gcc.cmake  arm-none-gcc.cmake  avr-gcc.cmake  clang.cmake  gcc.cmake  native.cmake  powerpc64-linux-gcc.cmake  scrutiny.cmake
cwrapper/: CMakeLists.txt  scrutiny_cwrapper.cpp  scrutiny_cwrapper.h
cwrapper/elf-symdump/: CMakeLists.txt  build.sh  toochain.cmake.in
cwrapper/elf-symdump/inc/: check.h  cmd.h  elf.h
cwrapper/elf-symdump/src/: cmd.c  elf.c  main.c
lib/: CMakeLists.txt  library.json
lib/cmake/: scrutiny.cmake
lib/inc/: scrutiny.h  scrutiny.hpp  scrutiny_build_config.hpp.default  scrutiny_build_config.hpp.in  scrutiny_c_compatible_types.h  scrutiny_common_codecs.hpp  scrutiny_compiler.hpp  scrutiny_config.h  scrutiny_config.hpp  scrutiny_crc.h  scrutiny_crc.hpp  scrutiny_ipc.hpp  scrutiny_loop_handler.h  scrutiny_loop_handler.hpp  scrutiny_main_handler.h  scrutiny_main_handler.hpp  scrutiny_setup.h  scrutiny_setup.hpp  scrutiny_setup.hpp.in  scrutiny_software_id.h  scrutiny_software_id.hpp  scrutiny_timebase.h  scrutiny_timebase.hpp  scrutiny_tools.h  scrutiny_tools.hpp  scrutiny_types.h  scrutiny_types.hpp  static_analysis_build_config.hpp
lib/inc/datalog/: scrutiny_datalogger.hpp
lib/inc/datalogging/: scrutiny_data_encoding.hpp  scrutiny_datalogger.hpp  scrutiny_datalogger_raw_encoder.hpp  scrutiny_datalogging.hpp  scrutiny_datalogging_conditions.hpp  scrutiny_datalogging_data_encoding.hpp  scrutiny_datalogging_trigger.hpp  scrutiny_datalogging_types.hpp
lib/inc/ipc/: scrutiny_ipc_avr.hpp  scrutiny_ipc_std_atomic.hpp  scrutiny_ipc_ti_c28.hpp  scrutiny_ipc_ti_c28x.hpp  scrutiny_ipc_tricore.hpp  scrutiny_ipc_x86.hpp
lib/inc/protocol/: scrutiny_codec_v1_0.h  scrutiny_codec_v1_0.hpp  scrutiny_comm_handler.h  scrutiny_comm_handler.hpp  scrutiny_protocol.h  scrutiny_protocol.hpp  scrutiny_protocol_definitions.h  scrutiny_protocol_definitions.hpp  scrutiny_protocol_tools.h  scrutiny_protocol_tools.hpp
lib/src/: scrutiny_common_codecs.cpp  scrutiny_config.cpp  scrutiny_crc.cpp  scrutiny_loop_handler.cpp  scrutiny_main_handler.cpp  scrutiny_software_id.cpp  scrutiny_tools.cpp
lib/src/datalog/: scrutiny_datalogger.cpp
lib/src/datalogging/: datalogging.cpp  scrutiny_datalogger.cpp  scrutiny_datalogger_raw_encoder.cpp  scrutiny_datalogging.cpp  scrutiny_datalogging_conditions.cpp  scrutiny_datalogging_trigger.cpp
lib/src/protocol/: scrutiny_codec_v1_0.cpp  scrutiny_comm_handler.cpp  scrutiny_protocol_definitions.cpp  scrutiny_protocol_tools.cpp
projects/: CMakeLists.txt
projects/c_testapp/: CMakeLists.txt
projects/c_testapp/assets/: aliases.json
projects/c_testapp/include/: argument_parser.h  file1.h  file2.h  tools.h
projects/c_testapp/include/comm_channels/: abstract_comm_channel.h  nix_serial_port_bridge.h  udp_bridge.h  win_serial_port_bridge.h  win_serial_port_bridge.hpp
projects/c_testapp/scripts/: make-sfd.sh  make_ctestapp_memdump.sh  make_testapp_memdump.sh  trigger_datalogging.py  trigger_user_callback.py  write_rpv.py
projects/c_testapp/src/: argument_parser.c  file1.c  file2.c  include_test.c  main.c  tools.c
projects/c_testapp/src/comm_channels/: nix_serial_port_bridge.c  udp_bridge.c  win_serial_port_bridge.c
projects/examples/cmake_external_project/: CMakeLists.txt  build_and_run.sh  main.cpp
projects/nsec2024_demo/: CMakeLists.txt  Dockerfile  build.sh  build_in_docker.sh  common.sh  docker_build.sh  flash.sh  scrutiny_server_config.json
projects/nsec2024_demo/cmake/: arduino_core.cmake  scrutiny-postbuild.cmake
projects/nsec2024_demo/cmake/toolchain/: avr.toolchain.cmake  mega2526.toolchain.cmake
projects/nsec2024_demo/src/: main.cpp  scrutiny_integration.cpp  scrutiny_integration.hpp
projects/platformio/: .gitignore  README.md  platformio.ini  scrutiny_hooks.py
projects/platformio/scripts/: activate-venv.sh  with-venv.sh
projects/platformio/src/: Console.cpp  Console.hpp  main.cpp
projects/testapp/: CMakeLists.txt
projects/testapp/assets/: aliases.json
projects/testapp/include/: argument_parser.h  argument_parser.hpp  file1.h  file1.hpp  file2.hpp  file3.hpp  file4.hpp  file5.hpp
projects/testapp/include/comm_channels/: abstract_comm_channel.h  abstract_comm_channel.hpp  nix_serial_port_bridge.h  nix_serial_port_bridge.hpp  udp_bridge.h  udp_bridge.hpp  win_serial_port_bridge.h  win_serial_port_bridge.hpp
projects/testapp/scripts/: create_unittest_artifacts.sh  get_elf_memranges.py  make-sfd.sh  make_testapp_memdump.sh
projects/testapp/src/: argument_parser.cpp  argument_parser.h  file1.cpp  file1.h  file2.cpp  file2.h  file3.cpp  file4.cpp  file5.cpp  include_test.cpp  main.cpp  udp_bridge.cpp  udp_bridge.h
projects/testapp/src/comm_channels/: nix_serial_port_bridge.cpp  udp_bridge.cpp  win_serial_port_bridge.cpp
scripts/: build.bat  build.sh  ci.sh  clean.sh  format_code.sh  runtest.bat  runtests.sh  static_analysis.sh
scripts/ci/: shell.sh
test/: CMakeLists.txt  main.cpp  scrutiny_base_test.cpp  scrutiny_base_test.hpp  scrutiny_test.cpp  scrutiny_test.h  scrutiny_test.hpp  test_codecs.cpp  test_crc.cpp  test_cwrapper.cpp  test_ipc.cpp  test_timebase.cpp  test_types.cpp  test_variable_fetching.cpp
test/commands/: test_comm_control.cpp  test_datalog_control.cpp  test_get_info.cpp  test_memory_control.cpp  test_memory_control_rpv.cpp  test_user_command.cpp
test/datalogging/: raw_format_parser.cpp  raw_format_parser.hpp  test_datalogger.cpp  test_datalogging_types.cpp  test_fetch_operands.cpp  test_raw_encoder.cpp  test_trigger_conditions.cpp
test/patches/: scrutiny_gtest-1.8.1.patch
test/protocol/: test_comm_handler.cpp  test_protocol_rx_parsing.cpp  test_protocol_tx_parsing.cpp
